# PPvIS-1

./: .gitattributes  LICENSE  README.md
laba_1/: Gemfile  README.md  start.rb
laba_1/app/controllers/: board.rb  console_output.rb  game.rb
laba_1/helpers/: validate.rb
laba_1/spec/: validate_spec.rb
laba_2/: CMakeLists.txt  main.cpp
laba_2/Figures/: BasicFigure.cpp  BasicFigure.h  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  HalfSquareHalfCircle.cpp  HalfSquareHalfCircle.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h
laba_3/: .dotenv  .gitignore  README.md  config.ru
laba_3/app/controllers/: app_controller.rb  operations_controller.rb  user_controller.rb
laba_3/app/controllers/views/: home.erb  layout.erb  sign_in.erb
laba_3/app/models/: users.rb
laba_3/app/views/: authenticate.erb  balance.erb  deposit.erb  home.erb  layout.erb  sign_in.erb  transfer.erb  withdraw.erb
laba_3/db/: schema.rb  seeds.rb  user_authdevelopment.sqlite
laba_3/db/migrate/: 20190925150159_create_user.rb  20190929125715_users.rb
laba_3/helpers/: operations_helper.rb  validation_helper.rb
laba_4/: bucket_sort.rb  main.rb  selection_sort.rb
