cmake_minimum_required(VERSION 3.14)
project(laba_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(laba_2 main.cpp Figures/BasicFigure.cpp Figures/BasicFigure.h Figures/Ellipse.cpp Figures/Ellipse.h Figures/Circle.cpp Figures/Circle.h Figures/Quadrangle.cpp Figures/Quadrangle.h Figures/Rectangle.cpp Figures/Rectangle.h Figures/Square.cpp Figures/Square.h Figures/HalfSquareHalfCircle.cpp Figures/HalfSquareHalfCircle.h)